@@ -81,6 +81,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - DOS                    Alessandro Staltari
 - Eiffel                 Zoran Simic
 - eMail \ mbox           Benny Baumann
+- Erlang                 Benny Baumann, Dan Forest-Barbier, Uwe Dauernheim
 - FreeBasic              Roberto Rossi
 - FO (abas-ERP)          Tan-Vinh Nguyen
 - Fortran                Cedric Arrabie
